catalogue toggle fixing in tablet + product card media button z-index fixing

--- a/src/styles/blocks/product-card/media-button.sass
+++ b/src/styles/blocks/product-card/media-button.sass
@@ -6,7 +6,7 @@
     border-radius: $border-radius
     margin-right: .5rem
     +flex-container-center
-    z-index: 2
+    z-index: 1
     &:last-child
         margin-right: 0
     +desktop
